# OpenGL-playground

./: CMakeLists.txt  DebugLog.cpp  DebugLog.h  FpsLimiter.h  InputHandler.cpp  InputHandler.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp  maths_funcs.h
Antons OpenGL /: DebugLog.cpp  FpsLimiter.cpp  main.cpp
OpenGL_1_Camera/: ShaderProgram.h  main.cpp
OpenGL_1_Camera/Assets/: .directory
OpenGL_1_Camera/Shaders/: fragment.glsl  fragment2.glsl
OpenGL_2_Lighting/: CMakeLists.txt  main.cpp
OpenGL_2_Lighting/Shaders/: lightFragment.glsl  vertex.glsl
OpenGL_3_MaterialLight/: main.cpp
OpenGL_3_MaterialLight/Shaders/: objectFragment.glsl  objectVertex.glsl
OpenGL_4_LightMaps/: main.cpp  shader.hpp
OpenGL_4_LightMaps/Shaders/: objectFragment.glsl
OpenGL_4_LightingMaps/: main.cpp
OpenGL_4_LightingMaps/Shaders/: objectFragment.glsl
OpenGL_5_1_LightCasters_DirectionalLight/: CMakeLists.txt  ShaderProgram.cpp  main.cpp
OpenGL_5_1_LightCasters_DirectionalLight/Shaders/: objectFragment.glsl
OpenGL_5_2_LightCasters_PointLight/: main.cpp
OpenGL_5_3_LightCasters_SpotLight/: main.cpp  stb_image.hpp
OpenGL_5_3_LightCasters_SpotLight/Shaders/: objectFragment.glsl  objectVertex.glsl
OpenGL_5_LightCasters/: main.cpp
OpenGL_5_LightCasters/Shaders/: objectFragment.glsl
OpenGL_6_MultipleLights/: main.cpp
OpenGL_6_MultipleLights/Shaders/: objectFragment.glsl
OpenGL_7_MeshLoading/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  main.cpp  shader.hpp
OpenGL_BlankPrj/: main.cpp
Shaders/: test.frag  test.vert
